sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value i
      i=0;
      ^AlgCombSort:11: error: not found: value i
    while (i+ecart < getValueCount()){
           ^AlgCombSort:12: error: not found: value i
      if (isSmaller(i,i+1)){
                    ^AlgCombSort:12: error: not found: value i
      if (isSmaller(i,i+1)){
                      ^AlgCombSort:13: error: not found: value i
        i=i+1;
        ^AlgCombSort:15: error: not found: value i
        swap(i,i+ecart);
             ^AlgCombSort:15: error: not found: value i
        swap(i,i+ecart);
               ^